[package]
name = "rust_trader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apca = "0.26.2"
chrono = "0.4.24"
dotenv = "0.15.0"
futures = "0.3.28"
reqwest = "0.11.16"
serde_json = "1.0.96"
tokio = { version = "1.16", features = ["full"] }
